--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,131 @@
+/* color scheme sourced from http://khroma.co/generator/ */
+:root {
+    --outer-space: #33393f;
+    --bright-turquoise: #2aefcb;
+    --gin: #e0eae4;
+    --heliotrope: #e866ec;
+  }
+  
+  /* set content highlight color and background */
+  ::selection {
+    background-color: var(--bright-turquoise);
+    color: var(--outer-space);
+  }
+/* element selectors  select all of that element type*/
+html {
+    /* set 1rem to 10px instead of native 16px to make it easier to calculate font-size values for the rest of the page (e.g. 1.6rem is 16px, 2.0rem is 20px, etc.) */
+    font-size: 62.5%;
+}
+
 body {
-    font-family: 'Fira Sans', sans-serif;
-  }
+    /* Sans Serif font stack is implemented to help select the best font for each type of computer operating system */
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
+        Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+
+    /* set body font size to 1.75rem, which is 1.75x more than the font-size of 10px, making it 17.5px  */
+    font-size: 1.75rem;
+    line-height: 1.5;
+    color: var(--gin);
+    background-color: var(--outer-space);
+}
   
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    font-family: 'Merriweather', serif;
+h1,  h2,  h3,  h4,  h5,  h6, h7 {
+    margin-bottom: 0.625rem;
+    color: var(--heliotrope);
     font-weight: 700;
-  }
-  
+    line-height: 1.1;
+}
+
+h1 {
+    font-size: 4rem;
+}
+
+h2 {
+    font-size: 3.5rem;
+}
+
+h3 {
+    font-size: 3rem;
+}
+
+h4 {
+    font-size: 2.5rem;
+}
+
+h5 {
+    font-size: 2rem;
+}
+
+h6 {
+    font-size: 1.5rem;
+}
+
+h7 {
+    font-size: 1rem;
+}
+
+p {
+    margin-bottom: 1rem;
+}
+
+header {
+    width: 90%;
+    margin: 0 auto;
+    padding: 2.5rem;
+    text-align: center;
+}
+
+section {
+    width: 90%;
+    margin: 2.5rem auto;
+}
+
+main {
+    width: 90%;
+    margin: 2rem auto;
+}
+
+footer {
+    margin: 1rem;
+    text-align: center;
+    line-height: .5rem;
+}
+
+/* class selectors select all elements with that class */
+
+.row {
+    /* create main grid with flexbox, use negative margins to offset the padding on the .card-column class */
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    margin-left: -1.5rem;
+    margin-right: -1.5rem;
+}
+.card-column {
+    flex: 1 0 100%;
+    padding: 1.5rem;
+    transition: flex-basis 500ms linear;
+    margin-bottom: 1.5rem;
+}
+
+.justify-center {
+    justify-content: center;
+}
+
+.header {
+
+}
+
+.center {
+
+}
+
+.t-1 {
+
+}
+
+.t-2 {
+
+}
+
+/* id selectors are an unique id to identify an element */
